Added an on-enter directive to make submitting from inputs easier. Renamed folders/files for consistency. Fixed error when trying to log in with empty fields.

--- a/src/public/directives/recipeatNavbar/recipeatNavbar.html
+++ b/src/public/directives/recipeatNavbar/recipeatNavbar.html
@@ -34,7 +34,8 @@
                                ng-model="recipeSearchText"
                                type="text"
                                class="form-control"
-                               placeholder="Search for a recipe...">
+                               placeholder="Search for a recipe..."
+                               dc-on-enter="searchRecipe()">
                         <span id="navbar-recipe-search-button" class="input-group-btn" ng-click="searchRecipe()">
                             <a class="btn btn-default" type="button">
                                <span class="glyphicon glyphicon-search"></span>
