Implemented recipe details page, centered search bar, added scroll to top on page change, added loading spinner while search results are being fetched.

--- a/src/public/directives/recipeatNavbar/recipeatNavbar.html
+++ b/src/public/directives/recipeatNavbar/recipeatNavbar.html
@@ -26,9 +26,8 @@
                 </li>
             </ul>
 
-            <form class="navbar-form">
-                <div class="navbar-recipe-search form-group">
-
+            <form class="navbar-form" id="navbar-search-form">
+                <div class="form-group">
                     <div class="input-group">
                         <input id="navbar-recipe-search-input"
                                ng-model="recipeSearchText"
