--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,6 +12,7 @@
     <!-- CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="vendor/jquery/jquery-ui.css" rel="stylesheet">
+    <link href="css/loading-spinner.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <!-- Vendor JS -->
     <script src="vendor/jquery/jquery-3.2.1.js"></script>
@@ -33,13 +34,12 @@
     <script src="services/recipe.service.client.js"></script>
     <script src="services/nutrition.service.client.js"></script>
     <!-- Controllers -->
-    <script src="views/recipeSearch/controllers/recipeSearch.controller.client.js"></script>
+    <script src="views/recipe/controllers/recipeSearch.controller.client.js"></script>
+    <script src="views/recipe/controllers/recipeDetails.controller.client.js"></script>
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
     <!-- TEST FILES -->
-    <script src="views/test/controllers/food2ForkTestSearch.controller.client.js"></script>
     <script src="views/test/controllers/nutritionixTestSearch.controller.client.js"></script>
-    <script src="views/test/controllers/recipeDetails.controller.client.js"></script>
     <script src="views/test/controllers/nutritionDetails.controller.client.js"></script>
 </head>
 
