fixed unwanted text shadow in dropdown

--- a/src/public/directives/recipeatNavbar/recipeatNavbar.html
+++ b/src/public/directives/recipeatNavbar/recipeatNavbar.html
@@ -29,8 +29,8 @@
                         <span class="glyphicon glyphicon-cog"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#!/settings" class="nav-bar-page-tab">settings</a></li>
-                        <li><a ng-click="logout()" class="nav-bar-page-tab">logout</a></li>
+                        <li><a href="#!/settings">settings</a></li>
+                        <li><a ng-click="logout()">logout</a></li>
                     </ul>
                 </li>
             </ul>
