Added some animations using animate.css

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,6 +13,7 @@
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="vendor/jquery/jquery-ui.css" rel="stylesheet">
     <link href="css/loading-spinner.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <!-- Vendor JS -->
     <script src="vendor/jquery/jquery-3.2.1.js"></script>
