Implemented groundwork for settings/profile pages.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -39,6 +39,8 @@
     <script src="views/recipe/controllers/recipeDetails.controller.client.js"></script>
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
+    <script src="views/user/controllers/settings.controller.client.js"></script>
+    <script src="views/user/controllers/profile.controller.client.js"></script>
     <!-- TEST FILES -->
     <script src="views/test/controllers/nutritionixTestSearch.controller.client.js"></script>
     <script src="views/test/controllers/nutritionDetails.controller.client.js"></script>
