Styled settings page, added groundwork for liking/sharing recipes, and viewing liked/shared recipes and followed/following users on profiles.

--- a/src/public/directives/recipeatNavbar/recipeatNavbar.html
+++ b/src/public/directives/recipeatNavbar/recipeatNavbar.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="collapsible-navigationbar">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-show="loggedIn">
-                    <a href="#!/profile" class="nav-bar-page-tab">
+                    <a href="#!/profile/{{user.username}}" class="nav-bar-page-tab">
                         <span class="glyphicon glyphicon-user"></span>
                         <span id="nav-bar-user-name"></span>
                     </a>
