--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,6 +31,7 @@
     <!-- Directives -->
     <script src="directives/recipeatNavbar/recipeatNavbar.js"></script>
     <script src="directives/dcOnEnter/dcOnEnter.js"></script>
+    <script src="directives/hoverChange/hoverChange.js"></script>
     <!-- Services -->
     <script src="services/user.service.client.js"></script>
     <script src="services/recipe.service.client.js"></script>
