--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,6 +16,7 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <!-- Vendor JS -->
+    <script src="https://use.fontawesome.com/20cc0d8440.js"></script>
     <script src="vendor/jquery/jquery-3.2.1.js"></script>
     <script src="vendor/jquery/jquery-ui.js"></script>
     <script src="vendor/angular/angular.js"></script>
