--- a/src/public/index.html
+++ b/src/public/index.html
@@ -43,6 +43,7 @@
     <script src="views/user/controllers/register.controller.client.js"></script>
     <script src="views/user/controllers/settings.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
+    <script src="views/user/controllers/editProfile.controller.client.js"></script>
 </head>
 
 <body>
