Groundwork for admin role/control panel, added a danger popup message in addition to the warning one.

--- a/src/public/directives/recipeatNavbar/recipeatNavbar.html
+++ b/src/public/directives/recipeatNavbar/recipeatNavbar.html
@@ -29,6 +29,7 @@
                         <span class="glyphicon glyphicon-cog"></span>
                     </a>
                     <ul class="dropdown-menu">
+                        <li ng-show="isUserAdmin"><a href="#!/admin">admin panel</a></li>
                         <li><a href="#!/settings">settings</a></li>
                         <li><a ng-click="logout()">logout</a></li>
                     </ul>
