--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,6 +36,7 @@
     <!-- Services -->
     <script src="services/user.service.client.js"></script>
     <script src="services/recipe.service.client.js"></script>
+    <script src="services/comment.service.client.js"></script>
     <!-- Controllers -->
     <script src="views/recipe/controllers/recipeSearch.controller.client.js"></script>
     <script src="views/recipe/controllers/recipeDetails.controller.client.js"></script>
