Switched vendor resources to use CDNs.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,22 +10,22 @@
     <link rel="icon" href="../../favicon.ico">
     <title>RecipEat</title>
     <!-- CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="vendor/jquery/jquery-ui.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/united/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
     <link href="css/loading-spinner.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <!-- Vendor JS -->
     <script src="https://use.fontawesome.com/20cc0d8440.js"></script>
-    <script src="vendor/jquery/jquery-3.2.1.js"></script>
-    <script src="vendor/jquery/jquery-ui.js"></script>
-    <script src="vendor/angular/angular.js"></script>
-    <script src="vendor/angular/angular-route.js"></script>
-    <script src="vendor/angular/angular-sanitize.js"></script>
-    <script src="vendor/angular/angular-animate.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-sanitize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-animate.min.js"></script>
     
-    <script src="vendor/angular-ui/dist/ui-bootstrap-tpls.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Application Config Files -->
     <script src="app.js"></script>
     <script src="config.js"></script>
