--- a/src/public/index.html
+++ b/src/public/index.html
@@ -24,7 +24,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-sanitize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-animate.min.js"></script>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Application Config Files -->
     <script src="app.js"></script>
@@ -37,6 +36,7 @@
     <script src="services/user.service.client.js"></script>
     <script src="services/recipe.service.client.js"></script>
     <script src="services/comment.service.client.js"></script>
+    <script src="services/activity.service.client.js"></script>
     <!-- Controllers -->
     <script src="views/recipe/controllers/recipeSearch.controller.client.js"></script>
     <script src="views/recipe/controllers/recipeDetails.controller.client.js"></script>
