Got activities working, where users likes and shares are stored so that users who follow them can see them. Not displayed or styled yet.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -38,6 +38,7 @@
     <script src="services/comment.service.client.js"></script>
     <script src="services/activity.service.client.js"></script>
     <!-- Controllers -->
+    <script src="views/homepage/controllers/homepage.controller.client.js"></script>
     <script src="views/recipe/controllers/recipeSearch.controller.client.js"></script>
     <script src="views/recipe/controllers/recipeDetails.controller.client.js"></script>
     <script src="views/user/controllers/login.controller.client.js"></script>
