Added ability for admin to create a new user. Added server method to handle creating that new user without logging in as the user.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -47,6 +47,7 @@
     <script src="views/user/controllers/profile.controller.client.js"></script>
     <script src="views/user/controllers/editProfile.controller.client.js"></script>
     <script src="views/admin/controllers/adminPanel.controller.client.js"></script>
+    <script src="views/admin/controllers/adminCreateUser.controller.client.js"></script>
     <script src="views/admin/controllers/adminEditUser.controller.client.js"></script>
 </head>
 
